--- a/node/package.json
+++ b/node/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd --exit-child --transpile-only --ignore-watch node_modules src/server.ts",
-    "start": "node dist/app.js"
+    "dev": "tsnd --transpile-only --ignore-watch node_modules --exit-child src/server.ts",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "@prisma/client": "3.2.1",
